--- a/.github/workflows/toot-together.yml
+++ b/.github/workflows/toot-together.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
-      - name: checkout master
+      - name: checkout main
         uses: actions/checkout@v2
       - name: Toot
         uses: joschi/toot-together@v1.x
